# movrec

./: README.md  db.sqlite3  django admin.txt  pyproject.toml  requirements.txt
movie_app/: forms.py  models.py  movies.csv  urls.py  views.py
movie_app/management/commands/: import_movies.py
movie_app/migrations/: 0001_initial.py  0002_delete_loginform.py  0003_initial.py  0004_genre_movie.py  0005_remove_movie_genres_remove_movie_title.py
movie_app/templates/movie_app/: about.html  dashboard.html  index.html  movie_list.html  movie_list3.html  my-login.html  register.html
mysite/: settings.py  urls.py
