[tool.poetry]
name = "movierec"
version = "0.1.0"
description = ""
authors = ["Pawan Manjhi <manjhipawankumar26@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
gunicorn = "^21.2.0"
asgiref = "^3.7.2"
crispy-bootstrap5 = "^2023.10"
django = "5.0.1"
django-crispy-forms = "^2.1"
jinja2 = "^3.1.3"
markupsafe = "^2.1.4"
sqlparse = "^0.4.4"
tzdata = "^2023.4"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
